--- a/firmware/README
+++ b/firmware/README
@@ -1,25 +1,31 @@
-Femulator - Traktor Kontrol F1 emulator for Arduino
+Femulator - Traktor Kontrol F1 emulator for AVR
 Copyright 2013 Andrew Bythell <abythell@ieee.org>
 http://angryelectron.com/projects/femulator
 
-This firmware, when loaded onto an Arduino UNO, will appear in the OS as a
-Traktor Kontrol F1 instead of a USB Serial device.  This allows it to send and
-receive signals to and from Traktor Pro 2.5's Remix Decks.  When used in
+This firmware, when loaded onto an Arduino UNO, Teensy, or other LUFA-supported target, 
+will appear in the OS as a Traktor Kontrol F1 instead of a USB Serial device.  This allows 
+it to send and receive signals to and from Traktor Pro 2.5's Remix Decks.  When used in
 conjuction with the Femulator software, it allows full control of the remix
 decks from any MIDI device. 
+
+It has been developed and tested using an Arduino UNO / ATMEGA8U2.
 
 To build the firmware:
 ---
 1. Install an AVR development environment, including gcc-avr, avr-libc, make, and avrdude
-2. Download LUFA version 100807 from http://fourwalledcubicle.com/LUFA.php
-3. Extract LUFA into this directory and rename as ./LUFA
+2. Download LUFA (http://fourwalledcubicle.com/LUFA.php)
+3. Extract LUFA into this directory and rename or symlink as ./LUFA
+4. Edit the makefile for your BOARD and MCU
 4. Type "make"
 
 To program firmware using an in-system programmer:
 ---
 1. Edit Makefile and set AVRDUDE_PROGRAMMER and AVRDUDE_PORT
-2. Connect ISP programmer to the UNO's ATMEGA8U2 ISP header (not the ATMEGA328!)
+2. Connect ISP programmer to the device's ISP header.
 3. Type "make program" 
+
+Note, if flashing an UNO, use the ISP header for the ATMEGA8U2 (solder it yourself).  Don't use the ISP
+header for the ATMEGA328, or you'll overwrite the Arduino bootloader.
 
 To program firmware using dfu-programmer via dfu-programmer or Flip:
 ---
