--- a/firmware/README
+++ b/firmware/README
@@ -3,10 +3,9 @@ Copyright 2013 Andrew Bythell <abythell@ieee.org>
 http://angryelectron.com/projects/femulator
 
 This firmware, when loaded onto an Arduino UNO, Teensy, or other LUFA-supported target, 
-will appear in the OS as a Traktor Kontrol F1 instead of a USB Serial device.  This allows 
-it to send and receive signals to and from Traktor Pro 2.5's Remix Decks.  When used in
-conjuction with the Femulator software, it allows full control of the remix
-decks from any MIDI device. 
+will appear in the OS as a Traktor Kontrol F1.  This allows it to send and receive signals
+to and from Traktor Pro 2.5's Remix Decks.  When used in conjuction with the Femulator software,
+it allows full control of the remix decks from any MIDI device. 
 
 It has been developed and tested using an Arduino UNO / ATMEGA8U2.
 
