--- a/firmware/README
+++ b/firmware/README
@@ -12,26 +12,25 @@ It has been developed and tested using an Arduino UNO / ATMEGA8U2.
 To build the firmware:
 ---
 1. Install an AVR development environment, including gcc-avr, avr-libc, make, and avrdude
-2. Download LUFA (http://fourwalledcubicle.com/LUFA.php)
-3. Extract LUFA into this directory and rename or symlink as ./LUFA
-4. Edit the makefile for your BOARD and MCU
+2. Get the latest LUFA trunk (https://github.com/abcminiuser/lufa) into ./LUFA
+3. Edit the makefile for your BOARD and MCU
 4. Type "make"
 
 To program firmware using an in-system programmer:
 ---
 1. Edit Makefile and set AVRDUDE_PROGRAMMER and AVRDUDE_PORT
 2. Connect ISP programmer to the device's ISP header.
-3. Type "make program" 
+3. Type "make avrdude" 
 
 Note, if flashing an UNO, use the ISP header for the ATMEGA8U2 (solder it yourself).  Don't use the ISP
 header for the ATMEGA328, or you'll overwrite the Arduino bootloader.
 
-To program firmware using dfu-programmer via dfu-programmer or Flip:
+To program firmware using dfu-programmer or flip:
 ---
 1. Put the 8U2 into USB DFU mode:
 2. Assert and hold the 8U2's RESET line
 3. Assert and hold the 8U2's HWB line
 4. Release the 8U2's RESET line
 5. Release the 8U2's HWB line
-6. Confirm that the board enumerates as either "Arduino Uno DFU" or "Arduino Mega 2560 DFU"
+6. Confirm that the board enumerates as DFU 
 7. Type "make dfu" (OS X or Linux) or "make flip" (Windows)
